gallery header footer navigation added

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>photo-gallery</title>
+    <link rel="stylesheet" href="//d2ipatng7oc247.cloudfront.net/2.0.6/css/ds.css">
   </head>
   <body>
     <noscript>
